2018-03-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcd.c (ReadPCDImage): Add checks for EOF. Fixes oss-fuzz
	issue 7180 "graphicsmagick/coder_PCDS_fuzzer: Timeout in
	graphicsmagick_coder_PCDS_fuzzer".  (Credit to OSS-Fuzz)

2018-03-29  Greg Wolfe  <gregory.wolfe@kodakalaris.com>

	* coders/svg.c (SVGStartElement, SVGEndElement),
	magick/render.c (DrawImage): This changeset implements the SVG
	"use" element.  Graphical elements (e.g., "rect", "text", etc.)
	can be tagged with an identifier using 'id="identifier"' when
	defined within the "defs" section.  They can then be referenced
	elsewhere in the SVG file using:

	<use xlink:href="#identifier" ... />

	When referencing a graphical element by its identifier, the
	following syntaxes are now treated as being the same:

	href="#identifier"
	href="url(#identifier)"
	xlink:href="#identifier"
	xlink:href="url(#identifier)"

2018-03-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tim.c (ReadTIMImage): Reader was not observing subimage
	and subrange to quit after the specified frame range.  Inspired by
	oss-fuzz 7132 "graphicsmagick/coder_TIM_fuzzer: Timeout in
	graphicsmagick_coder_TIM_fuzzer" (Credit to OSS-Fuzz)

2018-03-27  Greg Wolfe  <gregory.wolfe@kodakalaris.com>

	* magick/svg.c (SVGStartElement): Enable setting the
	background color from the SVG file when the client
	specifies style="background:color" inside the <svg>
	... </svg> element.

2018-03-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mtv.c (ReadMTVImage): Add some elementary tracing to MTV
	reader.

	* coders/png.c (ReadMNGImage): Fix SourceForge issue 554
	"Divide-by-zero in ReadMNGImage (coders/png.c)".  (Credit to Trace
	Probe)

	* coders/bmp.c (ReadBMPImage): Assure that start position always
	advances to avoid looping BMPs.  Fixes oss-fuzz 7045
	"graphicsmagick/coder_BMP_fuzzer: Timeout in
	graphicsmagick_coder_BMP_fuzzer". (Credit to OSS-Fuzz)
