@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180329"
-#define public MagickPackageReleaseDate "snapshot-20180329"
+#define public MagickPackageVersionAddendum ".020180330"
+#define public MagickPackageReleaseDate "snapshot-20180330"
