@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2018-03-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/pict.c (ReadPICTImage): Check image pixel limits before
+allocating memory for tile.  Fixes oss-fuzz 7217
+&quot;graphicsmagick/coder_PICT_fuzzer: Out-of-memory in
+graphicsmagick_coder_PICT_fuzzer&quot;.</li>
+</ul>
+</blockquote>
 <p>2018-03-29  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
